<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="new_chat"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_new_chat"
        android:shortcutShortLabel="@string/shortcut_new_chat_short"
        android:shortcutLongLabel="@string/shortcut_new_chat_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="com.hermes.android.ACTION_NEW_CHAT"
            android:targetPackage="com.hermes.android"
            android:targetClass="com.hermes.android.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="com.hermes.android.ACTION_SEARCH"
            android:targetPackage="com.hermes.android"
            android:targetClass="com.hermes.android.MainActivity" />
    </shortcut>

</shortcuts>
